--- a/devel/todo.org
+++ b/devel/todo.org
@@ -257,6 +257,13 @@ the new one, it will be a difference.
 *** DONE Support multiple $TABLE blocks
 
 ** VPC sims - no new method needed
+
+*** TODO [#A] If adding ROW, dont add column names
+issue is if people use ignore=C then after adding ROW to the column
+names, the column names will be read as data.
+
+*** TODO [#A] character columns with =DROP seem to break it
+list(na=".",quote=FALSE,row.names=FALSE,scipen=0,col.names=TRUE)
 *** DONE By default, reuse $INPUT and $DATA sections, with updated data path
 Normally, one would simply reuse the estimation input data set for this
 *** DONE NMsim needs to not handle $DATA section if data=NULL
