--- a/vignettes/NMsim-intro.Rmd
+++ b/vignettes/NMsim-intro.Rmd
@@ -272,18 +272,20 @@ The input data is a data.frame that
 * Can contain character variables (automatically carried to results)
 * Column order does not matter 
 
-As long as those requirements are met, there are no requirements to how the data sets are created. So if you already have a prefered way to do this, that's fine. NMsim provides convenient helper functions that can optionally be used. E.g., the data set used in these simulations can be created this way:
+As long as those requirements are met, there are no requirements to how the data sets are created. So if you already have a prefered way to do this, that's fine. NMsim provides convenient helper functions that can optionally be used. `NMcreateDoses()` creates just the dosing events, and `addEVID2()`
+adds the sampling events. By default, doses are indicated using
+`EVID=1` and samples by `EVID=2`.
+
 
 ```{r,gen-data,echo=TRUE}
 doses <- NMcreateDoses(TIME=c(0,24),AMT=c(300,150),
                        addl=list(ADDL=c(0,5),II=c(0,24)),CMT=1)
-dat.sim <- addEVID2(doses,time.sim=0:(24*7),CMT=2)
+dat.sim <- addEVID2(doses,TIME=0:(24*7),CMT=2)
 ```
 
-### Creating dosing regimens
-`NMcreateDoses()` creates just the dosing events, and `addEVID2()` adds the sampling events. By default, doses are indicated using `EVID=1` and samples by `EVID=2`.
-
-Notice, `NMcreateDoses()` has convenient behaviours. See `?NMcreateDoses` and the vignette ond creating simulation data sets for more.
+Notice, `NMcreateDoses()` has many flexible and convenient features. See
+`?NMcreateDoses` and the vignette ond creating simulation data sets
+for more.
 
 <details>
 <summary>Additional `NMcreateDoses()` examples</summary>
@@ -300,7 +302,11 @@ NMcreateDoses(TIME=c(0,12,24),AMT=data.table(AMT=c(2,1,4,2),DOSE=c(1,1,2,2)))
 
 ### Adding sampling times
 
-For adding sampling times to a set of doses and/or samples, `addEVID2()` provides a similarly flexible interface. It accepts data.frames with covariates allowing for different sampling schemes for different subject groups (say different dosing regimens), and dosing times can be supplied relative to previous dosing times.
+For adding sampling times to a set of doses and/or samples,
+`addEVID2()` provides a similarly flexible interface. It accepts
+data.frames with covariates allowing for different sampling schemes
+for different subject groups (say different dosing regimens), and
+dosing times can be supplied relative to previous dosing times.
 
 <details>
 <summary>Additional `addEVID2()` examples</summary>
@@ -324,7 +330,12 @@ addEVID2(dt.dos,TAPD=1:2,CMT=data.frame(CMT=2:3,DVID=c("Parent","Metabolite")))
 
 ### Time since previous dose
 
-While not used in these examples, it's worth mentioning `NMdata::addTAPD()` for adding time since previous dose and other variables related to previous dose - previous dosing time, previous dose amount, cumulative number of doses, cumulative number of doses, and culative dose amount. These are often useful to add to a simulation dataset:
+While not used in these examples, it's worth mentioning
+`NMdata::addTAPD()` for adding time since previous dose and other
+variables related to previous dose - previous dosing time, previous
+dose amount, cumulative number of doses, cumulative number of doses,
+and culative dose amount. These are often useful to add to a
+simulation dataset:
 
 ```{r}
 dat.sim <- addTAPD(dat.sim)
