--- a/vignettes/NMsim-intro.Rmd
+++ b/vignettes/NMsim-intro.Rmd
@@ -233,7 +233,8 @@ simres <- NMsim(file.mod=file.mod,data=data.sim)
 simres <- NMreadSim("simres-intro/xgxr021_noname_MetaData.rds")
 ```
 
-<summary>Plot simulation results (click to show code)</summary>
+The simulation input data set is a data.frame, and `NMsim()` returns a
+data.frame. Plot of simulation results (click to button show code):
 
 <div class="fold s">
 ```{r,simple-sim-plot,eval=TRUE,echo=TRUE,results="hide"}
@@ -264,7 +265,6 @@ available in the [`xgxr`](https://cran.r-project.org/package=xgxr).
 
 
 # Simulation data sets
-The simulation input data set is a data.frame, and `NMsim()` returns a data.frame.  
 
 The input data is a data.frame that
 
