--- a/vignettes/NMsim-forest.Rmd
+++ b/vignettes/NMsim-forest.Rmd
@@ -175,10 +175,11 @@ If you encounter issues with samples that do not run, consider whether any of th
 
 
 ```{r,echo=TRUE}
-NMdata::NMreadExt(file.mod,as.fun="data.table")[par.type=="THETA",.(value,RSE=se/value),by=.(par.name,FIX)] |>
-    NMdata::mergeCheck(NMrelate(file.mod,par.type="THETA",as.fun="data.table")[,.(par.name,code)],by="par.name",quiet=TRUE) 
+NMdata::NMreadExt(file.mod,as.fun="data.table")[par.type=="THETA",.(RSE=se/value),by=.(par.name,FIX)] |>
+    NMdata::mergeCheck(NMdata::NMrelate(file.mod,par.type="THETA",as.fun="data.table")[,.(par.name,code)],by="par.name",quiet=TRUE) 
 ```
 
+A large RSE is a potential issue for strictly positive parameters (RSE=0.25 for a parameter with a positive estimate corresponds to roughly 1/10,000 chance that a sample is negative). In this case, `THETA`s are estimated on log scale, and the covariate effects could be negative, so this model does not seem to have such issues.
 
 ## Post processing 
 
@@ -214,7 +215,7 @@ sum.uncertain <- summarizeCovs(simres,
 
 We will use the R package `coveffectsplot` for plotting. `coveffectsplot::forest_plot()` requires certain column names so we adjust those first.
 
-```{r,fig.width=10}
+```{r,fig.width=10,warning=FALSE}
 setDT(sum.uncertain)
 setnames(sum.uncertain,
          cc(covvalf,predmm,predml,predmu,metric.var),
