--- a/vignettes/NMsim-intro.Rmd
+++ b/vignettes/NMsim-intro.Rmd
@@ -500,7 +500,7 @@ In the following we use both of these approaches to simulate 1000 new
 subjects. We use `NMsim()`'s `name.sim` argument to distinguish the
 simulation in output data and simulation output files.
 
-<summary>Simulate 1000 new subjects using `$SUBPROBLEMS`</summary>
+- Simulate 1000 new subjects using `$SUBPROBLEMS`
 
 <div class="fold s">
 ```{r,subproblems,include=TRUE,echo=TRUE}
@@ -516,7 +516,7 @@ simres.subprob <- NMsim(file.mod=file.mod,
 ```
 </div>
 
-<summary>Simulate 1000 new subjects with covariate sampling</summary>
+- Simulate 1000 new subjects with covariate sampling
 
 <div class="fold s">
 ```{r,datarep,include=TRUE,echo=TRUE}
@@ -554,7 +554,7 @@ simres.datarep <- NMsim(file.mod=file.mod,
 </div>
 
 
-<summary>Derive and plot 90% prediction intervals</summary>
+- Derive and plot 90% prediction intervals
 
 ```{r,pred-inds-calc}
 ## Collect and stack simulation results 
@@ -593,7 +593,7 @@ simres <- NMreadSim("simres-intro/xgxr021_noname_MetaData.rds")
 
 The folder and file names were constructed based on `dir.res="simres-intro"` and because `name.sim` was not provided for that first simulation, in which case "noname" is used as a placeholder. In fact, if we look at the console output from NMsim, it is telling us exactly that (look at the last line).
 
-<summary>Click to show R console output from NMsim</summary>
+Click to show R console output from NMsim
 
 
 <div class="fold o">
