--- a/devel/todo.org
+++ b/devel/todo.org
@@ -425,3 +425,11 @@ ENDIF
 The lapply(....,unNMsimRes) does not seem to work. The next call to
 rbind still gets rbind.NMsimRes. Would it be better to run unNMsimRes
 in a loop?
+** NMwriteInits
+*** TODO [#B] Support ext format
+trying to update from an ext object. But below, the handling of
+`inits` may wipe lower, upper, and fix - not sure. So I think it would
+be better to translate ext to the inits format, and then merge the two
+inits objects. ext should be allowed to contain fix, lower and
+upper. Remember also, ext may contain multiple estimates (`model`
+column?)
