checks of OBS ONLY

--- a/vignettes/NMsim-publications.Rmd
+++ b/vignettes/NMsim-publications.Rmd
@@ -19,7 +19,8 @@ header-includes:
 
 
 ## ACOP 2024
-
+<!-- For .bib: -->
+<!-- Date of Conference November 10-13, 2024 Conference Location Phoenix, Arizona -->
 
 [**NMsim - Seamless Nonmem Simulation Platform in R**](../reference/figures/NMsim_intro_web.pdf) (Poster T32)  
 Authors: **Philip Delff**  
@@ -28,7 +29,7 @@ Authors: **Philip Delff**
 <!-- [`Code`](https://github.com/NMautoverse/NMsim/blob/main/publications/ACOP2024/NMsim_general_html.Rmd) -->
 The code is in [NMsim - Seamless NONMEM Simulation Platform in R](NMsim-intro.html)  
 Received the **ISoP PMx DATA PROGRAMMING SIG AWARD**
-
+DOI 10.70534/PGJU4426
 
 [**Building Automated Pharmacometrics Analysis Workflows in R with NMsim**](../reference/figures/NMsim_automated_workflows_web.pdf) (Poster T49)  
 Authors: **Boris Grinshpun, Samer Mouksassi, Philip Delff**  
@@ -37,12 +38,12 @@ Code to produce VPC plots, see [VPC simulations](NMsim-VPC.html).
 
 [**Simulation of clinical trial predictions with model uncertainty using NMsim**](../reference/figures/NMsim_param_uncertainty_web.pdf) (Poster T110)  
 Authors: **Sanaya Shroff**, **Philip Delff**  
-
+DOI 10.70534/BJFX9709
 
 [**Simulate modified Nonmem models using NMsim**](../reference/figures/NMsim_modified_models_web.pdf) (Poster T19)  
 Authors: **Simone Cassani, Jahidur Rashid, Christopher Banker, Philip Delff**  
-
+DOI 10.70534/DEWR9935
 
 [**A Model-Based Simulation Workflow Enables Automated and Accurate Generation of Clinical Pharmacology Summary Statistics**](../reference/figures/NMsim_simbased_NCA_web.pdf) (Poster T103)  
 Authors: **Brian M. Reilly Pharm.D., Ph.D., Philip H. Delff, Ph.D.**  
-
+DOI 10.70534/BBPP7391
