support for tabulators, a bit of vignettes

--- a/devel/todo.org
+++ b/devel/todo.org
@@ -42,6 +42,9 @@ Path to nonmem, psn, other ways to exec.
 
 **** Writing new methods
 
+*** TODO [#A] Include path to where Nonmem is executed in model table
+This doesn't seem to be saved at all. Issue is we can't find PRDERR or
+other debug info.
 ** TODO New function to apply time-varying covariates
 
 ** expandCovs
@@ -173,6 +176,18 @@ This is called model in output
 *** DONE include fast.tables column in meta data
 *** TODO Only paste lst bottom if tables not found
 If not, it is probably an issue reading the data?
+*** TODO Look for PRDERR in lst
+Look for this
+THERE ARE ERROR MESSAGES IN FILE PRDERR
+if found, paste top of PRDERR file
+
+Next step is look for this:
+ ATTEMPT TO COMPUTE 0**POWER WITH POWER<=0.
+If found, we can look for ** or ^ in control stream
+
+If individuals and data points are mentioned, we could look those up in data:
+0INDIVIDUAL NO.       1   ID= 1.80000000000000E+01   (WITHIN-INDIVIDUAL) DATA REC NO.   2
+ 
 *** DONE When adding seed and SUBPROBLEMS, only add once
 If $SIMULATION spans more than one line, this is currently pasted repeatedly
 *** DONE Drop NMsim from file names
