--- a/vignettes/NMsim-forest.Rmd
+++ b/vignettes/NMsim-forest.Rmd
@@ -174,9 +174,10 @@ simres.forest <- NMsim(file.mod # path to NONMEM model
 
 If you encounter issues with samples that do not run, consider whether any of your uncertainty estimates on `THETA`'s could lead to sampled `THETA`'s that could make the model be undefined. This would often be absorption parameters, clearences, volumes or any other strictly positive parameter which is estimated with poor precision. If this happens, you may want to go back and estimate that `THETA` on the log scale to make sure all sampled values will be positive. 
 
+
+<details>
 <summary>Click to show example</summary>
 
-<div class="fold s">
 
 A quick way to look for this is by combining parameter estimates (from the `.ext` file) and the automatic labeling of the parameters using `NMdata::NMrelate()`.
 ```{r,echo=TRUE}
@@ -187,7 +188,7 @@ NMdata::NMreadExt(file.mod,as.fun="data.table")[par.type=="THETA",.(RSE=se/value
 
 A large RSE is a potential issue for strictly positive parameters (RSE=0.25 for a parameter with a positive estimate corresponds to roughly 1/10,000 chance that a sample is negative). In this case, `THETA`s are estimated on log scale, and the covariate effects could be negative, so this model does not seem to have such issues.
 
-</div>
+</details>
 
 ## Post processing 
 
@@ -276,6 +277,8 @@ forest.ss <- fun.plot(sum.uncertain[period=="Steady-State"])
 ## Post processing explained step by step
 We are including the code from the main steps in the post processing function, `NMsim::summarizeCovs()`. It is important that the scientist understands that what the forest plots derived in this document represent is the relative effect of the covariate on the exposure metric. This is derived by `NMsim::summarizeCovs()` as quantiles of the exposure relative to the reference subject. The confidence interval hence expresses the uncertainty on the covariate effect for a subject with other covariates at reference values.
 
+<details>
+<summary>Details on code used for summarizing forest plot statistics (click to show)</summary>
 
 Notice, the code below consists of snippets from the
 `NMsim::summarizeCovs()` function. The code is not intended to be
